<resources>
    <string name="app_name">Mix Tape</string>
    <string name="add_mix_tape">Add Mix-Tape</string>
    <string name="tv_login"><u>LOGIN</u></string>

    <string name="preference_logIn">com.bonsondave.android.mixtape.LOGIN_PREFERENCE</string>
    <string name="txt_tracks">Tracks</string>
    <string name="_1_34">1:34</string>
    <string name="_4_19">4:19</string>

    <string name="placeholder_name">Dave\'s Mix</string>
</resources>