<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:context=".MediaPlayer">

    <ImageView
        android:id="@+id/img_Cassette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cassette"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <ImageView
        android:id="@+id/leftSpindle"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:src="@drawable/spindle"
        app:layout_constraintBottom_toBottomOf="@+id/img_Cassette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_Cassette"
        app:layout_constraintVertical_bias="0.457" />

    <ImageView
        android:id="@+id/rightSpindle"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:src="@drawable/spindle"
        app:layout_constraintBottom_toBottomOf="@+id/img_Cassette"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_Cassette"
        app:layout_constraintVertical_bias="0.457" />

<!--    <TextView-->
<!--        android:id="@+id/songTitle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="Song Title"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="22sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/artist"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/mix_Name"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <TextView-->
<!--        android:id="@+id/artist"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="Artist"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="16sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/layoutPlayer"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/mix_Name"-->
<!--        app:layout_constraintVertical_bias="0.884" />-->

    <TextView
        android:id="@+id/mix_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/placeholder_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_background"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textTracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/txt_tracks"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/img_player_btn_tracks"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/white"
            android:backgroundTint="@color/fui_transparent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_up_arrow"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textTracks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_play"
            android:onClick="btnPlay"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@id/img_player_btn_tracks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btn_previous"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/next_previous_btn_background"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/ic_previous"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintEnd_toStartOf="@id/btn_play"
            app:layout_constraintTop_toTopOf="@id/btn_play" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/next_previous_btn_background"
            android:src="@drawable/ic_next"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintStart_toEndOf="@id/btn_play"
            app:layout_constraintTop_toTopOf="@id/btn_play" />

        <ImageButton
            android:id="@+id/btn_shuffle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_shuffle"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_play" />

        <ImageButton
            android:id="@+id/btn_repeat"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_repeat"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_play" />

        <SeekBar
            android:id="@+id/player_SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:progress="30"
            android:theme="@style/SeekBarTheme"
            app:layout_constraintBottom_toTopOf="@id/btn_play" />

        <TextView
            android:id="@+id/textCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_1_34"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/player_SeekBar"
            app:layout_constraintStart_toStartOf="@id/player_SeekBar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:text="@string/_4_19"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/player_SeekBar"
            app:layout_constraintEnd_toEndOf="@id/player_SeekBar"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>